--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,4 @@
+org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 kotlin.code.style=official
-
-#Gradle
-org.gradle.jvmargs=-Xmx2048M -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options\="-Xmx2048M"
-
-#Android
-android.nonTransitiveRClass=true
-android.useAndroidX=true
-
-#MPP
-kotlin.mpp.androidSourceSetLayoutVersion=2
-kotlin.mpp.enableCInteropCommonization=true
-
-kotlin.native.ignoreDisabledTargets=true
+kotlin.version=1.9.22
+compose.version=1.6.0
