--- a/.github/coverage.yml
+++ b/.github/coverage.yml
@@ -16,6 +16,9 @@ jobs:
           java-version: "21"
           distribution: "oracle"
 
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@v3
+
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5
 
