--- a/.github/gradle-test.yml
+++ b/.github/gradle-test.yml
@@ -18,5 +18,8 @@ jobs:
           distribution: "oracle"
           java-version: '21'
 
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@v3
+
       - name: Clean, Build and Test
         run: ./gradlew clean test
