--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,43 +1,31 @@
-name: Coverage Test
+name: Measure coverage
 
 on:
-  push:
+  push
+
 jobs:
-  Coverage:
+  build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
-
+      - uses: actions/checkout@v4
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
-          java-version: "21"
-          distribution: "oracle"
+          distribution: 'oracle'
+          java-version: '21'
+      - name: Set up Gradle
+        uses: gradle/actions/setup-gradle@v3
+      - name: Generate kover coverage report
+        run: ./gradlew koverXmlReport
 
-      - name: Setup Android SDK
-        uses: android-actions/setup-android@v3
-
-      - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5
-
-      - name: Run Test Coverage
-        run: ./gradlew jacocoTestReport
-
-      - name: Jacoco Test Coverage Report
-        uses: cicirello/jacoco-badge-generator@v2.8.0
+      - name: Add coverage report to PR
+        id: kover
+        uses: mi-kas/kover-report@v1
         with:
-          generate-branches-badge: true
-          jacoco-csv-file: lib/build/jacoco/report.csv
-
-      - name: Add coverage to PR
-        id: jacoco
-        uses: madrapps/jacoco-report@v1.6.1
-        with:
-          paths: |
-            ${{ github.workspace }}/**/build/reports/jacoco/prodNormalDebugCoverage/prodNormalDebugCoverage.xml,
-            ${{ github.workspace }}/**/build/reports/jacoco/**/debugCoverage.xml
-          token: ${{ secrets.GITHUB_TOKEN }}
-          min-coverage-overall: 40
+          path: |
+            ${{ github.workspace }}/lib/build/reports/kover/report.xml
+          title: Code Coverage
           update-comment: true
+          min-coverage-overall: 70
+          min-coverage-changed-files: 70
+          coverage-counter-type: LINE
