--- a/.github/workflows/gradle-test.yml
+++ b/.github/workflows/gradle-test.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
-          distribution: "oracle"
+          distribution: 'adopt'
           java-version: '21'
 
       - name: Setup Android SDK
