Feat: restructured io, integrated neo4j 1. Add saving neo4j input data to settings 2. Moved sqlite functions to special class

--- a/src/main/kotlin/settings.json
+++ b/src/main/kotlin/settings.json
@@ -1,1 +1,1 @@
-{"language":"en-US"}
+{"language":"en-US","bd":"neo4j","neo4jUri":"bolt://localhost:7687","neo4jUser":"neo4j","neo4jPassword":"penguin-carlo-ceramic-invite-wheel-2163"}
